STX-309: Updateds
